<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginMenu</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Login</string>
    <string name="password">Hasło</string>
    <string name="login">Login</string>
    <string name="uzytkownik">Nazwa użytkownika</string>
    <string name="email">Adres e-mail</string>
    <string name="title_activity_rejestracja">Rejestracja</string>
    <string name="logout">Wyloguj</string>
    <string name="reg">Rejestracja</string>

</resources>
